--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -149,5 +149,6 @@
   "mn10:39.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį.",
   "mn10:39.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:39.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas penkis savinamus sandus kaip principus.",
-  "mn10:40.0": "Jutimo sričių skyrius"
+  "mn10:40.0": "Jutimo sričių skyrius",
+  "mn10:40.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas šešias vidines ir išorines jutimo sritis kaip principus."
 }
