--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -161,5 +161,6 @@
   "mn10:41.1": "Taip, jis gyvena, kontempliuodamas principus kaip principus viduje, arba gyvena, kontempliuodamas principus kaip principus išorėje, arba gyvena, kontempliuodamas principus kaip principus ir viduje, ir išorėje.",
   "mn10:41.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį.",
   "mn10:41.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
-  "mn10:41.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas šešias vidines ir išorines jutimo sritis kaip principus."
+  "mn10:41.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas šešias vidines ir išorines jutimo sritis kaip principus.",
+  "mn10:42.0": "4.4 Septyni nušvitimo veiksniai"
 }
