--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -162,5 +162,6 @@
   "mn10:41.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį.",
   "mn10:41.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:41.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas šešias vidines ir išorines jutimo sritis kaip principus.",
-  "mn10:42.0": "4.4 Septynių nušvitimo veiksnių skirius"
+  "mn10:42.0": "4.4 Septynių nušvitimo veiksnių skirius",
+  "mn10:42.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas septynis nušvitimo veiksnius kaip principus."
 }
