--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -164,5 +164,6 @@
   "mn10:41.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas šešias vidines ir išorines jutimo sritis kaip principus.",
   "mn10:42.0": "4.4 Septynių nušvitimo veiksnių skirius",
   "mn10:42.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas septynis nušvitimo veiksnius kaip principus.",
-  "mn10:42.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas septynis nušvitimo veiksnius kaip principus?"
+  "mn10:42.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas septynis nušvitimo veiksnius kaip principus?",
+  "mn10:42.3": "Štai vienuolis, viduje esant atidos nušvitimo veiksniui, supranta: „Manyje yra atidos nušvitimo veiksnys”, – arba viduje nesant atidos nušvitimo veiksnio, supranta: „Mano viduje nėra atidos nušvitimo veiksnio“. Jis taip pat supranta kaip kyla dar nekilęs atidos nušvitimo veiksnys, ir kaip kilęs atidos nušvitimo veiksnys išvystomas iki tobulumo, jis taip pat supranta."
 }
