--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -173,5 +173,6 @@
   "mn10:42.8": "Viduje esant susitelkimo nušvitimo veiksniui, jis supranta: „Manyje yra susitelkimo nušvitimo veiksnys”, – arba viduje nesant susitelkimo nušvitimo veiksnio, supranta: „Mano viduje nėra susitelkimo nušvitimo veiksnio“. Jis taip pat supranta kaip kyla dar nekilęs susitelkimo nušvitimo veiksnys, ir kaip kilęs susitelkimo nušvitimo veiksnys išvystomas iki tobulumo, jis taip pat supranta.",
   "mn10:42.9": "Viduje esant lygiažiūros nušvitimo veiksniui, jis supranta: „Manyje yra lygiažiūros nušvitimo veiksnys”, – arba viduje nesant lygiažiūros nušvitimo veiksnio, supranta: „Mano viduje nėra lygiažiūros nušvitimo veiksnio“. Jis taip pat supranta kaip kyla dar nekilęs lygiažiūros nušvitimo veiksnys, ir kaip kilęs lygiažiūros nušvitimo veiksnys išvystomas iki tobulumo, jis taip pat supranta.",
   "mn10:43.1": "Taip, jis gyvena, kontempliuodamas principus kaip principus viduje, arba gyvena, kontempliuodamas principus kaip principus išorėje, arba gyvena, kontempliuodamas principus kaip principus ir viduje, ir išorėje.",
-  "mn10:43.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį."
+  "mn10:43.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį.",
+  "mn10:43.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša."
 }
