--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -177,5 +177,6 @@
   "mn10:43.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:43.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas septynis nušvitimo veiksnius kaip principus.",
   "mn10:44.0": "Tiesų skirius",
-  "mn10:44.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus."
+  "mn10:44.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus.",
+  "mn10:44.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus?"
 }
