--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -179,5 +179,6 @@
   "mn10:44.0": "Tiesų skirius",
   "mn10:44.1": "Toliau, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus.",
   "mn10:44.2": "Ir kaip, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus?",
-  "mn10:44.3": "Štai, vienuoliai, vienuolis supranta kaip yra iš tikrųjų: „Tai yra kančia”, – supranta kaip yra iš tikrųjų: „Tai yra kančios šaltinis”, – supranta kaip yra iš tikrųjų: „Tai yra kančios pabaiga”, – supranta kaip yra iš tikrųjų: „Tai yra kelias į kančios pabaigą”."
+  "mn10:44.3": "Štai, vienuoliai, vienuolis supranta kaip yra iš tikrųjų: „Tai yra kančia”, – supranta kaip yra iš tikrųjų: „Tai yra kančios šaltinis”, – supranta kaip yra iš tikrųjų: „Tai yra kančios pabaiga”, – supranta kaip yra iš tikrųjų: „Tai yra kelias į kančios pabaigą”.",
+  "mn10:45.1": "Taip, jis gyvena, kontempliuodamas principus kaip principus viduje, arba gyvena, kontempliuodamas principus kaip principus išorėje, arba gyvena, kontempliuodamas principus kaip principus ir viduje, ir išorėje."
 }
