--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -183,5 +183,6 @@
   "mn10:45.1": "Taip, jis gyvena, kontempliuodamas principus kaip principus viduje, arba gyvena, kontempliuodamas principus kaip principus išorėje, arba gyvena, kontempliuodamas principus kaip principus ir viduje, ir išorėje.",
   "mn10:45.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį.",
   "mn10:45.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
-  "mn10:45.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus."
+  "mn10:45.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus.",
+  "mn10:46.1": "Bet kas, vienuoliai, kas septynis metus taip vysto šias keturias atidos sritis, gali tikėtis vieno iš šių dviejų vaisių:\n"
 }
