--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -184,5 +184,6 @@
   "mn10:45.2": "Jis stebi principuose kilimo prigimtį, arba stebi principuose nykimo prigimtį, arba stebi principuose ir kilimo, ir nykimo prigimtį.",
   "mn10:45.3": "Arba jame yra įtvirtinta atida: „Yra principai“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:45.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus.",
-  "mn10:46.1": "Bet kas, vienuoliai, kas septynis metus taip vysto šias keturias atidos sritis, gali tikėtis vieno iš šių dviejų vaisių:\n"
+  "mn10:46.1": "Bet kas, vienuoliai, kas septynis metus taip vysto šias keturias atidos sritis, gali tikėtis vieno iš šių dviejų vaisių:\n",
+  "mn10:46.2": "(arahanto) žinojimo šiame gyvenime arba, tebesant prisirišimui, nesugrįžtančiojo (būvio)."
 }
