--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -186,5 +186,6 @@
   "mn10:45.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas keturias taurinančias tiesas kaip principus.",
   "mn10:46.1": "Bet kas, vienuoliai, kas septynis metus taip vysto šias keturias atidos sritis, gali tikėtis vieno iš šių dviejų vaisių:\n",
   "mn10:46.2": "(arahanto) žinojimo šiame gyvenime arba, tebesant prisirišimui, nesugrįžtančiojo (būvio).",
-  "mn10:46.3": "Ką ten septyni metai,"
+  "mn10:46.3": "Ką ten septyni metai,",
+  "mn10:46.4": "Bet kas, vienuoliai, kas šešis metus taip vysto šias keturias atidos sritis …"
 }
