--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -191,5 +191,6 @@
   "mn10:46.5": "penkis metus …",
   "mn10:46.6": "keturis metus …",
   "mn10:46.7": "tris metus …",
-  "mn10:46.8": "du metus …"
+  "mn10:46.8": "du metus …",
+  "mn10:46.9": "vienerius metus …"
 }
