--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -188,7 +188,7 @@
   "mn10:46.2": "(arahanto) žinojimo šiame gyvenime arba, tebesant prisirišimui, nesugrįžtančiojo (būvio).",
   "mn10:46.3": "Ką ten septyneri metai,",
   "mn10:46.4": "Bet kas, vienuoliai, kas šešeris metus taip vysto šias keturias atidos sritis …",
-  "mn10:46.5": "penkis metus …",
+  "mn10:46.5": "penkeris metus …",
   "mn10:46.6": "keturis metus …",
   "mn10:46.7": "tris metus …",
   "mn10:46.8": "du metus …",
