--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -189,7 +189,7 @@
   "mn10:46.3": "Ką ten septyneri metai,",
   "mn10:46.4": "Bet kas, vienuoliai, kas šešeris metus taip vysto šias keturias atidos sritis …",
   "mn10:46.5": "penkeris metus …",
-  "mn10:46.6": "keturis metus …",
+  "mn10:46.6": "ketveris metus …",
   "mn10:46.7": "tris metus …",
   "mn10:46.8": "du metus …",
   "mn10:46.9": "vienerius metus …"
