--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -191,6 +191,6 @@
   "mn10:46.5": "penkeris metus …",
   "mn10:46.6": "ketveris metus …",
   "mn10:46.7": "trejus metus …",
-  "mn10:46.8": "du metus …",
+  "mn10:46.8": "dvejus metus …",
   "mn10:46.9": "vienerius metus …"
 }
