--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -200,5 +200,6 @@
   "mn10:46.14": "Bet kas, vienuoliai, kas šešis mėnesius taip vysto šias keturias atidos sritis …",
   "mn10:46.15": "penkis mėnesius …",
   "mn10:46.16": "keturis mėnesius …",
-  "mn10:46.17": "tris mėnesius …"
+  "mn10:46.17": "tris mėnesius …",
+  "mn10:46.18": "du mėnesius …"
 }
