--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -201,5 +201,6 @@
   "mn10:46.15": "penkis mėnesius …",
   "mn10:46.16": "keturis mėnesius …",
   "mn10:46.17": "tris mėnesius …",
-  "mn10:46.18": "du mėnesius …"
+  "mn10:46.18": "du mėnesius …",
+  "mn10:46.19": "vieną mėnesį"
 }
