--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -205,5 +205,6 @@
   "mn10:46.19": "vieną mėnesį",
   "mn10:46.20": "pusmėnesį …",
   "mn10:46.21": "Palikime, vienuoliai,  pusmėnesį.",
-  "mn10:46.22": "Bet kas, vienuoliai, kas septynias dienas taip vysto šias keturias atidos sritis, gali tikėtis vieno iš šių dviejų vaisių:"
+  "mn10:46.22": "Bet kas, vienuoliai, kas septynias dienas taip vysto šias keturias atidos sritis, gali tikėtis vieno iš šių dviejų vaisių:",
+  "mn10:46.23": "(arahanto) žinojimo šiame gyvenime arba, tebesant prisirišimui, nebesugrįžtančiojo (būvio)."
 }
