--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
@@ -18,5 +18,6 @@
   "sn56.39:3.2": "Sie blicken nicht zum Gesicht eines anderen Asketen oder Brahmanen auf: ",
   "sn56.39:3.3": "‚Sicher weiß und sieht dieser werte Herr.‘ ",
   "sn56.39:4.1": "Wie ein eiserner Pfosten oder ein Grenzpfosten: Er ist tief eingebettet und fest verankert, unerschütterlich und unverrückbar. ",
+  "sn56.39:4.2": "Selbst wenn gewaltige Stürme aus Osten, Westen, Norden oder Süden losbrechen würden, könnten sie ihn nicht zum Zittern, Schwanken oder Beben bringen. ",
   "sn56.39:4.3": "Und warum? "
 }
