--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -207,5 +207,6 @@
   "mn10:46.21": "Palikime, vienuoliai,  pusmėnesį.",
   "mn10:46.22": "Bet kas, vienuoliai, kas septynias dienas taip vysto šias keturias atidos sritis, gali tikėtis vieno iš šių dviejų vaisių:",
   "mn10:46.23": "(arahanto) žinojimo šiame gyvenime arba, tebesant prisirišimui, nebesugrįžtančiojo (būvio).",
-  "mn10:47.1": "„Vienuoliai, yra šis tiesioginis kelias į būtybių apsivalymą, liūdesio ir raudojimo įveikimą, skausmo ir nepasitenkinimo išnykimą, žinojimo pasiekimą, Nibbanos patyrimą – tai keturios atidos sritys."
+  "mn10:47.1": "„Vienuoliai, yra šis tiesioginis kelias į būtybių apsivalymą, liūdesio ir raudojimo įveikimą, skausmo ir nepasitenkinimo išnykimą, žinojimo pasiekimą, Nibbanos patyrimą – tai keturios atidos sritys.",
+  "mn10:47.2": "Ir taip, tai kas buvo pasakyta, buvo pasakyta dėl šios priežasties."
 }
