--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -209,5 +209,6 @@
   "mn10:46.23": "(arahanto) žinojimo šiame gyvenime arba, tebesant prisirišimui, nebesugrįžtančiojo (būvio).",
   "mn10:47.1": "„Vienuoliai, yra šis tiesioginis kelias į būtybių apsivalymą, liūdesio ir raudojimo įveikimą, skausmo ir nepasitenkinimo išnykimą, žinojimo pasiekimą, Nibbanos patyrimą – tai keturios atidos sritys.",
   "mn10:47.2": "Ir taip, tai kas buvo pasakyta, buvo pasakyta dėl šios priežasties.",
-  "mn10:47.3": "Štai ką pasakė Palaimintasis."
+  "mn10:47.3": "Štai ką pasakė Palaimintasis.",
+  "mn10:47.4": "Patenkinti tie vienuoliai džiaugėsi Palaimintojo žodžiais."
 }
