--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
@@ -24,5 +24,6 @@
   "sn56.39:4.5": "Ebenso gibt es Asketen und Brahmanen, die wahrhaftig verstehen, was das Leiden ist, was der Ursprung des Leidens ist, was das Aufhören des Leidens ist und was die Übung ist, die zum Aufhören des Leidens führt. ",
   "sn56.39:4.6": "Sie blicken nicht zum Gesicht eines anderen Asketen oder Brahmanen auf: ",
   "sn56.39:4.7": "‚Sicher weiß und sieht dieser werte Herr.‘ ",
-  "sn56.39:4.8": "Und warum nicht? "
+  "sn56.39:4.8": "Und warum nicht? ",
+  "sn56.39:4.9": "Weil sie die vier edlen Wahrheiten klar gesehen haben. "
 }
