--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
@@ -25,5 +25,6 @@
   "sn56.39:4.6": "Sie blicken nicht zum Gesicht eines anderen Asketen oder Brahmanen auf: ",
   "sn56.39:4.7": "‚Sicher weiß und sieht dieser werte Herr.‘ ",
   "sn56.39:4.8": "Und warum nicht? ",
-  "sn56.39:4.9": "Weil sie die vier edlen Wahrheiten klar gesehen haben. "
+  "sn56.39:4.9": "Weil sie die vier edlen Wahrheiten klar gesehen haben. ",
+  "sn56.39:4.10": "Welche vier? "
 }
