--- a/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/sn/sn56/sn56.39_translation-de-sabbamitta.json
@@ -26,5 +26,6 @@
   "sn56.39:4.7": "‚Sicher weiß und sieht dieser werte Herr.‘ ",
   "sn56.39:4.8": "Und warum nicht? ",
   "sn56.39:4.9": "Weil sie die vier edlen Wahrheiten klar gesehen haben. ",
-  "sn56.39:4.10": "Welche vier? "
+  "sn56.39:4.10": "Welche vier? ",
+  "sn56.39:4.11": "Die edlen Wahrheiten vom Leiden, vom Ursprung des Leidens, vom Aufhören des Leidens und von der Übung, die zum Aufhören des Leidens führt. "
 }
