--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -7,7 +7,7 @@
   "mn10:1.4": "„Vienuoliai!”",
   "mn10:1.5": "„Taip, Garbusis,” – atsakė Palaimintajam tie vienuoliai.",
   "mn10:1.6": "Palaimintasis štai ką pasakė:",
-  "mn10:2.1": "„Vienuoliai, yra šis tiesioginis kelias į būtybių apsivalymą, liūdesio ir raudojimo įveikimą, skausmo ir nepasitenkinimo išnykimą, žinojimo pasiekimą, Nibbanos patyrimą – tai keturios atidos sritys.",
+  "mn10:2.1": "„Vienuoliai, tiesioginis kelias į būtybių apsivalymą, liūdesio ir raudojimo įveikimą, skausmo ir nepasitenkinimo išnykimą, žinojimo pasiekimą, Nibbanos patyrimą – tai keturios atidos sritys.",
   "mn10:3.1": "Kokios keturios?",
   "mn10:3.2": "Štai, vienuoliai, vienuolis gyvena, kontempliuodamas kūną kaip kūną, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu; ",
   "mn10:3.3": "gyvena kontempliuodamas jausmo tonus kaip jausmo tonus, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu;",
