--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -12,7 +12,7 @@
   "mn10:3.2": "Štai, vienuoliai, vienuolis gyvena, kontempliuodamas kūną kaip kūną, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu; ",
   "mn10:3.3": "gyvena kontempliuodamas jausmo tonus kaip jausmo tonus, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu;",
   "mn10:3.4": "gyvena kontempliuodamas protą kaip protą, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu;",
-  "mn10:3.5": "gyvena kontempliuodamas reiškinius kaip reiškinius, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu.",
+  "mn10:3.5": "gyvena kontempliuodamas principus kaip principus, būdamas uolus, su aiškiu supratimu, atidus, be godulio ir nepasitenkinimo pasauliu.",
   "mn10:4.0.1": "1. Kūno kontempliacija",
   "mn10:4.0.2": "1.1 Atidos kvėpavimui skyrius",
   "mn10:4.1": "Ir kaip, vienuoliai, vienuolis gyvena kontempliuodamas kūną kaip kūną?",
