--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -24,7 +24,7 @@
   "mn10:4.7": "Jis mokosi: „Įkvėpsiu nuramindamas kūno darinius”, – mokosi: „Iškvėpsiu nuramindamas kūno darinius”.",
   "mn10:4.8": "Panašiai, vienuoliai, kaip įgudęs tekintojas arba tekintojo padėjėjas, sukdamas (detalę ant staklių) ilgai, supranta: „Suku ilgai”, – sukdamas trumpai, supranta: „Suku trumpai“.",
   "mn10:4.9": "Lygiai gi, vienuoliai, taip ilgai įkvėpdamas vienuolis supranta: „Įkvepiu ilgai”, – ilgai iškvėpdamas supranta: „Iškvepiu ilgai”. Trumpai įkvėpdamas jis supranta: „Įkvepiu trumpai”, – trumpai iškvėpdamas supranta: „Iškvepiu trumpai”.",
-  "mn10:4.10": "Jis mokosi: „Įkvėpsiu patirdamas visą kūną”, – mokosi: „iškvėpsiu patirdamas visą kūną”.",
+  "mn10:4.10": "Jis mokosi: „Įkvėpsiu patirdamas visą kūną”, – mokosi: „Iškvėpsiu patirdamas visą kūną”.",
   "mn10:4.11": "Jis mokosi: „Įkvėpsiu nuramindamas kūno darinius”, – mokosi: „Iškvėpsiu nuramindamas kūno darinius”.",
   "mn10:5.1": "Taip, jis gyvena, kontempliuodamas kūną kaip kūną viduje, arba gyvena, kontempliuodamas kūną kaip kūną išorėje, arba gyvena, kontempliuodamas kūną kaip kūną ir viduje, ir išorėje.",
   "mn10:5.2": "Jis stebi kūne kilimo prigimtį, arba stebi kūne nykimo prigimtį, arba stebi kūne ir kilimo, ir nykimo prigimtį.",
