--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -31,7 +31,7 @@
   "mn10:5.3": "Arba jame yra įtvirtinta atida: „Yra kūnas“, – kurios pakanka žinojimui ir nenutrūkstančiai atidai (palaikyti). Jis būna nepriklausomas ir pasaulyje prie nieko neprisiriša.",
   "mn10:5.4": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamaskūną kaip kūną.",
   "mn10:6.0": "1.2 Pozų skyrius",
-  "mn10:6.1": "Toliau, vienuoliai, vienuolis eidamas supranta: „einu”, – stovėdamas supranta: „Aš stoviu”, – sėdėdamas supranta: „Aš sėdžiu”, – o gulėdamas supranta: „Aš guliu”.",
+  "mn10:6.1": "Toliau, vienuoliai, vienuolis eidamas supranta: „Einu”, – stovėdamas supranta: „Stoviu”, – sėdėdamas supranta: „Sėdžiu”, – o gulėdamas supranta: „Guliu”.",
   "mn10:6.2": "Ir kad ir kokioje pozoje jo kūnas būtų, jis tai žino.",
   "mn10:7.1": "Taip, jis gyvena, kontempliuodamas kūną kaip kūną viduje, arba gyvena, kontempliuodamas kūną kaip kūną išorėje, arba gyvena, kontempliuodamas kūną kaip kūną ir viduje, ir išorėje.",
   "mn10:7.2": "Jis stebi kūne kilimo prigimtį, arba stebi kūne nykimo prigimtį, arba stebi kūne ir kilimo, ir nykimo prigimtį.",
