--- a/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn10_translation-lt-piyadassi.json
@@ -68,7 +68,7 @@
   "mn10:16.3": "„Šitas gi kūnas yra tokios pat prigimties, tokia (jo) ateitis, (jis) to neišvengs.”",
   "mn10:17.1": "Taip, jis gyvena, kontempliuodamas kūną kaip kūną …",
   "mn10:17.2": "Taip irgi, vienuoliai, vienuolis gyvena, kontempliuodamas kūną kaip kūną.",
-  "mn10:18-23.1": "Toliau, vienuoliai, vienuolis panašiai kaip kad matydamas išmesto kapinėse kūno griaučius su kraujais ir mėsom, sujungtą sausgyslėmis …",
+  "mn10:18-23.1": "Toliau, vienuoliai, vienuolis panašiai kaip kad matydamas išmesto kapinėse kūno sausgyslėmis sujungtus griaučius su mėsa ir kraujais …",
   "mn10:18-23.2": "griaučius, išteptus kraujais, be mėsų, sujungtus sausgyslėmis …",
   "mn10:18-23.3": "griaučius, be kraujo ir mėsų, sujungtus sausgyslėmis …",
   "mn10:24.1": "griaučius, be jungiančių sausgyslių, išmėtytus į visas puses: vienur rankų kaulą, kitur padikaulį, vienur kulkšnies kaulą, kitur blauzdikaulį, vienur šlaunikaulį, kitur dubenkaulį, vienur šonkaulį, kitur stuburkaulį, vienur raktikaulį, kitur kaklo kaulą, vienur žandikaulį, kitur dantį, dar kitur kaukolę,",
