--- a/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/mn/mn7_translation-lt-piyadassi.json
@@ -16,5 +16,6 @@
   "mn7:2.7": "Kad ir  į kokiais dažais dažytojas ją apdorotų – mėlynais, geltonais, raudonais ar vyšniniais – ji bus gerai nusidažiusi, bus švarios spalvos.",
   "mn7:2.8": "Kokia yra to priežastis?",
   "mn7:2.9": "Taip, vienuoliai, yra dėl drobės švarumo.",
-  "mn7:2.10": "Lygiai gi, vienuoliai, taip, kai protas yra nesuterštas, lauktinas (atgimimas) geroje vietoje."
+  "mn7:2.10": "Lygiai gi, vienuoliai, taip, kai protas yra nesuterštas, lauktinas (atgimimas) geroje vietoje.",
+  "mn7:3.1": "Ir kokie, vienuoliai, yra proto teršalai?"
 }
